--- a/crates/clonetree/Cargo.toml
+++ b/crates/clonetree/Cargo.toml
@@ -7,3 +7,10 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
+reflink-copy = "0.1"
+ignore = "0.4"
+anyhow = "1.0"
+globset = "0.4"
+
+[dev-dependencies]
+tempfile = "3.0"
