First implementation of ctree

--- a/crates/ctree/Cargo.toml
+++ b/crates/ctree/Cargo.toml
@@ -7,3 +7,6 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
+clonetree = { path = "../clonetree" }
+clap = { version = "4", features = ["derive"] }
+anyhow = "1"
