--- a/crates/clonetree/Cargo.toml
+++ b/crates/clonetree/Cargo.toml
@@ -13,3 +13,8 @@ thiserror = "1.0"
 
 [dev-dependencies]
 tempfile = "3.0"
+criterion = "0.5"
+
+[[bench]]
+name = "clone_tree_bench"
+harness = false
