--- a/crates/clonetree/Cargo.toml
+++ b/crates/clonetree/Cargo.toml
@@ -4,7 +4,9 @@ version.workspace = true
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
+description.workspace = true
 repository.workspace = true
+readme = "../../README.md"
 
 [dependencies]
 reflink-copy = "0.1"
