--- a/crates/ctree/Cargo.toml
+++ b/crates/ctree/Cargo.toml
@@ -5,6 +5,8 @@ edition.workspace = true
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
+description.workspace = true
+readme = "../../README.md"
 
 [dependencies]
 clonetree = { workspace = true }
